# OpenCV_UCSD_WORKSHOP

./: OpenCV_Course.docx  OpenCV_Jianfeng_Flyer.docx  UCSD_OpenCV_Lecture Three.pptx  UCSD_OpenCV_Lecture_Four.pptx
Assignment/: OpenCV_Assignment.docx
source_code/BackgroundSub/: CMakeLists.txt  Ctracker.cpp  Ctracker.h  Detection.cpp  Detection.h  SvKalmanFilter.cpp  SvKalmanFilter.h  background_sub.cpp  cvblob.cpp  cvblob.h  cvlabel.cpp  cvtrack.cpp  hungarianAlg.cpp  kalmanWrapper.cpp  kalmanWrapper.h
source_code/Face_recognition/: CMakeLists.txt  facerec_eigenfaces.cpp
source_code/Face_recognition/Data/: att_faces.txt
source_code/Face_recognition/Data/att_faces/: faces.csv
source_code/OpenCV_ImageIO/: CMakeLists.txt  Morphology_1.cpp
source_code/machine_learning/introduction_to_svm/: CMakeLists.txt  introduction_to_svm.cpp
source_code/machine_learning/non_linear_svms/: CMakeLists.txt
source_code/objectDetection/: CMakeLists.txt  objectDetection2.cpp
